--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,22 @@
             <div class="box"></div>
 
           </nav>
+
+          <h2 class="header__title">
+            ХУДОЖ<span class="header__title--end">НІЙ</span>
+            <br>
+            МУЗЕЙ
+          </h2>
+
+          <a href="#" class="button header__button">
+            <div class="button__text"></div>
+
+            <div class="button__arrow"></div>
+          </a>
+
+          <a href="#actual" class="header__teleport">
+            ПОДІЇ
+          </a>
         </div>
       </div>
     </header>
@@ -99,37 +115,7 @@
 
     <main class="page__content">
 
-      <section class="section head">
-        <div class="container">
-          <div class="grid grid--desktop">
-            <div class="grid__item grid__item--3-6">
-              <h2 class="head__title">
-                ХУДОЖ<span class="head__title--end">НІЙ</span>
-                <br>
-                МУЗЕЙ
-              </h2>
-
-              <a href="#" class="button header__button">
-                <div class="button__text"></div>
-
-                <div class="button__arrow"></div>
-              </a>
-            </div>
-
-            <div class="grid__item grid__item--7-12">
-              <div class="head__photo-container">
-                <img
-                  src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
-                  alt="head photo"
-                  class="head__photo"
-                >
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="section actual">
+      <section class="section actual" id="actual">
         <div class="container">
           <h3 class="section__title">Актуальні події</h3>
 
@@ -140,13 +126,13 @@
                   <img
                     src="./images/Rectangle 2.2.png"
                     alt=""
-                    class="place__photo"
+                    class="place__photo place__photo--actual"
                   >
                 </div>
 
                 <div class="grid__item grid__item--9-12">
                   <div class="place__about">
-                    <div class="place__about-photo">
+                    <div class="place__about-photo ">
                       <div class="place__about-photo-name">ВИСТАВКА</div>
 
                       <div class="place__about-photo-date">26.08-29.11.2019</div>
@@ -174,15 +160,15 @@
 
             <div class="place__content">
               <div class="grid grid--desktop">
-                <div class="grid__item grid__item--6-12">
+                <div class="grid__item grid__item--6-12 place__reverse_2">
                   <img
                     src="./images/place2.png"
                     alt="place photo"
-                    class="place__photo"
+                    class="place__photo place__photo--actual"
                   >
                 </div>
 
-                <div class="grid__item grid__item--1-4">
+                <div class="grid__item grid__item--1-4 place__reverse_1">
                   <div class="place__about">
                     <div class="place__about-photo">
                       <div class="place__about-photo-name">ВИСТАВКА</div>
@@ -191,18 +177,18 @@
                     </div>
 
                     <h4 class="place__about-title">
-                      Йду і повертаюсь
+                      І спогади і мрії
                       <div class="orange"></div>
                     </h4>
 
                     <div class="place__about-content">
-                      Національний Художній Музей України презентує
+                      Національний художній музей України до 100
                       <br>
-                      унікальну частину колекції Градобанку -
+                      річчя від дня народження видатної української
                       <br>
-                      українське мистецтво другої половини
+                      художниці Тетяни Яблонської відкриває
                       <br>
-                      1980-1995 років.
+                      ретроспективну ювілейну виставку «І спогади і мрії».
                     </div>
                   </div>
                 </div>
@@ -212,18 +198,120 @@
           </div>
         </div>
 
+        <img
+          src="./images/boat.png"
+          alt="place boat"
+          class="place__boat"
+        >
+
+        <div class="container">
+          <div class="place">
+            <div class="place__content">
+
+              <div class="grid grid--desktop">
+                <div class="grid__item grid__item--4-9">
+                  <div class="place__about">
+                    <div class="place__lection">
+                      <div class="place__about-photo ">
+                        <div class="place__about-photo-name">ЛЕКЦІЯ</div>
+
+                        <div class="place__about-photo-date">26/08/2019 - 11:00</div>
+                      </div>
+
+                      <h3 class="place__about-title">
+                        Від класицизму до романтизму
+                      </h3>
+                    </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="section gallery" id="gallery">
         <div class="container">
           <h3 class="section__title">Галерея</h3>
 
-          <div class="place gallery__place">
+          <div class="gallery__place">
+
+            <div class="place__first">
+              <div class="grid">
+                <div class="grid__item grid__item--1-4">
+                  <img
+                    src="./images/1.png"
+                    alt="1"
+                    class="place__photo place__photo--gallery-1"
+                  >
+                </div>
+
+                <div class="grid__item grid__item--5-12">
+                  <img
+                    src="./images/2.png"
+                    alt="2"
+                    class="place__photo place__photo--gallery-1"
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="place__second">
+              <div class="grid">
+                <div class="grid__item grid__item--1-8">
+                  <img
+                    src="./images/3.png"
+                    alt="3"
+                    class="place__photo place__photo--gallery-2"
+                  >
+                </div>
+
+                <div class="grid__item grid__item--9-12">
+                  <img
+                    src="./images/4.png"
+                    alt="4"
+                    class="place__photo place__photo--gallery-2"
+                  >
+                </div>
+              </div>
+            </div>
 
           </div>
+        </div>
 
         </div>
 
+      </section>
+
+      <section class="section subscribe" id="subscribe">
+        <div class="container">
+          <div class="subscribe__about">
+            <h3 class="subscribe__title">
+              Підписка
+            </h3>
+
+            <div class="subscribe__text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </div>
+          </div>
+
+          <div class="subscribe__fortext">
+            <div class="grid grid--desktop">
+              <div class="grid__item grid__item--4-8">
+                <input
+                  type="email"
+                  class="subscribe__email"
+                  placeholder="E-mail"
+                >
+              </div>
+
+              <div class="grid__item grid__item--9-10">
+                <div class="subscribe__button"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
