--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,17 @@
     <title>NA MU</title>
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="icon" href="./images/NAMU.svg">
+
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="slick/slick.css"
+    >
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="slick/slick-theme.css"
+    >
   </head>
   <body class="page__body">
 
@@ -36,7 +47,7 @@
               музей
             </h1>
 
-            <a href="#" class="button header__btn link grid__item grid__item--tablet-1-2 grid__item--desktop-3-4 grid__item--tablet-row-3-3">
+            <a href="#events" class="button header__btn link grid__item grid__item--tablet-1-2 grid__item--desktop-3-4 grid__item--tablet-row-3-3">
               <span class="header__btn--text">
                 Квитки
               </span>
@@ -63,33 +74,33 @@
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#lecture" class="nav__link">
               Відвідування
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#subscribe" class="nav__link">
               Стати нашим другом
             </a>
           </li>
 
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#subscribe" class="nav__link">
               Про Нас
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#subscribe" class="nav__link">
               Магазин
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#subscribe" class="nav__link">
               Блог
             </a>
           </li>
           <li class="nav__item">
-            <a href="#" class="nav__link">
+            <a href="#contacts" class="nav__link">
               Контакти
             </a>
           </li>
@@ -183,7 +194,7 @@
 
       </div>
 
-      <article class="event event--lecture">
+      <article id="lecture" class="event event--lecture">
 
         <img
           src="./images/lecture.jpg"
@@ -256,77 +267,12 @@
             alt="A girl on a bench"
           >
 
-          <div class="buttons buttons--mobile grid__item grid__item--tablet-2-5">
-            <input
-              class="buttons__radio"
-              type="radio"
-              name="gallery"
-              value="img_1"
-              id="1"
-              checked
-            >
-            <label for="1" class="buttons__btn"></label>
-            <input
-              class="buttons__radio"
-              type="radio"
-              name="gallery"
-              value="img_2"
-              id="2"
-            >
-            <label for="2" class="buttons__btn"></label>
-            <input
-              class="buttons__radio"
-              type="radio"
-              name="gallery"
-              value="img_3"
-              id="3"
-            >
-            <label for="3" class="buttons__btn"></label>
-            <input
-              class="buttons__radio"
-              type="radio"
-              name="gallery"
-              value="img_4"
-              id="4"
-            >
-            <label for="4" class="buttons__btn"></label>
-            <input
-              class="buttons__radio"
-              type="radio"
-              name="gallery"
-              value="img_5"
-              id="5"
-            >
-            <label for="5" class="buttons__btn"></label>
-            <input
-              class="buttons__radio"
-              type="radio"
-              name="gallery"
-              value="img_6"
-              id="6"
-            >
-            <label for="6" class="buttons__btn"></label>
-          </div>
-
-          <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-
-          <script>
-            $(document).ready(function(){
-              $('input[type="radio"]').click(function(){
-                var inputValue = $(this).attr("value");
-                var targetBox = $("." + inputValue);
-                $(targetBox).css('visibility', 'visible');
-                $(".gallery__image").not(targetBox).css('visibility', 'hidden');
-              });
-            });
-          </script>
-
         </div>
 
       </div>
     </section>
 
-    <section class="subscribe">
+    <section id="subscribe" class="subscribe">
       <div class="container">
 
         <div class="subscribe__content">
@@ -340,6 +286,7 @@
             action="#"
             method="POST"
             class="subscribe__form"
+            onsubmit="setTimeout(function(){window.location.reload();},10);"
           >
             <input
               type="email"
@@ -347,14 +294,14 @@
               placeholder="E-mail"
               required
             >
-            <button class="button button--arrow subscribe__submit"></button>
+            <button class="button button--arrow subscribe__submit" type="submit"></button>
           </form>
         </div>
 
       </div>
     </section>
 
-    <footer class="footer page__section page__section--footer">
+    <footer id="contacts" class="footer page__section page__section--footer">
       <div class="container">
         <div class="grid nav grid--mobile">
 
@@ -414,15 +361,23 @@
             </p>
 
             <p class="t-table__text">
-              вул. М. Грушевського, 6;
+              <a href="https://goo.gl/maps/yTiDipA12M5MXJfFA" class="link link--footer">
+                вул. М. Грушевського, 6;
+                <br>
+                Київ, 01001
+              </a>
               <br>
-              Київ, 01001
+              <a href="tel:+38(044)278-13-57" class="link link--footer">
+                тел. +38 (044) 278-13-57
+              </a>
               <br>
-              тел. +38 (044) 278-13-57
+              <a href="tel:+38(044)278-74-54" class="link link--footer">
+                факс +38 (044) 278-74-54
+              </a>
               <br>
-              факс +38 (044) 278-74-54
-              <br>
-              e-mail: info@namu.kiev.ua
+              <a href="mailto:info@namu.kiev.ua" class="link link--footer">
+                e-mail: info@namu.kiev.ua
+              </a>
             </p>
           </div>
 
@@ -444,12 +399,12 @@
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#lecture" class="nav__link">
                 Відвідування
               </a>
             </li>
             <li class="nav__item">
-              <a href="" class="nav__link">
+              <a href="#subscribe" class="nav__link">
                 Стати нашим другом
               </a>
             </li>
@@ -457,22 +412,22 @@
 
           <ul class="nav__list nav__list--item-right grid__item grid__item--mobile-2-2 grid__item--tablet-4-4 grid__item--desktop-10-10 grid__item--xlarge-13-13">
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#subscribe" class="nav__link">
                 Про Нас
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#subscribe" class="nav__link">
                 Магазин
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#subscribe" class="nav__link">
                 Блог
               </a>
             </li>
             <li class="nav__item">
-              <a href="#" class="nav__link">
+              <a href="#contacts" class="nav__link">
                 Контакти
               </a>
             </li>
@@ -490,6 +445,44 @@
 
       </div>
     </footer>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+      integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    >
+    </script>
+
+    <script type="text/javascript">
+        $('.gallery__container').slick({
+          dots: true,
+          infinite: true,
+          speed: 500,
+          fade: true,
+          cssEase: 'linear',
+          centerMode: true,
+        });
+
+        jQuery(window).on('resize', function() {
+          var viewportWidth = jQuery(window).width();
+
+          if (viewportWidth >= 1024) {
+              $('.gallery__container').slick('unslick');
+          } else {
+            $('.gallery__container').slick({
+              dots: true,
+              infinite: true,
+              speed: 500,
+              fade: true,
+              cssEase: 'linear',
+              centerMode: true,
+            })
+          }
+      });
+    </script>
 
   </body>
 </html>
