Changed carousel behaviour on resize and load

--- a/src/index.html
+++ b/src/index.html
@@ -457,14 +457,20 @@
     </script>
 
     <script type="text/javascript">
+
+    jQuery(window).load(function() {
+      var viewportWidth = jQuery(window).width();
+      if (viewportWidth >= 1024) {
         $('.gallery__container').slick({
           dots: true,
           infinite: true,
           speed: 500,
           fade: true,
           cssEase: 'linear',
-          centerMode: true,
         });
+      }
+    });
+
 
         jQuery(window).on('resize', function() {
           var viewportWidth = jQuery(window).width();
