--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <a href="#" class="header__menu-opener"></a>
+          <a href="#" class="header__menu-closer"></a>
           <a href="/" class="logo">
             <span class="logo__txt">
               na
@@ -160,11 +160,28 @@
 
     <section class="gallery" id="gallery">
       <h2 class="gallery__name">Галерея</h2>
-      <img
-        src="./images/g01.png"
-        alt="gallery"
-        class="gallery__img"
-      >
+      <div class="gallery__container">
+        <img
+          src="./images/g01.png"
+          alt="gallery"
+          class="gallery__img"
+        >
+        <img
+          src="./images/g05.png"
+          alt="gallery"
+          class="gallery__img"
+        >
+        <img
+          src="./images/g03.png"
+          alt="gallery"
+          class="gallery__img"
+        >
+        <img
+          src="./images/g04.png"
+          alt="gallery"
+          class="gallery__img"
+        >
+      </div>
       <img
         src="./images/Group 17.9.svg"
         alt="slider"
@@ -180,18 +197,30 @@
         <p class="subscription__content">
           Бути в курсі всіх актуальних подій та останніх новин.
         </p>
-        <div class="button button--email">
-          <div class="button__tickets button__tickets--email">
-            E-mail
-          </div>
-          <div class="button__square button__square--email">
+        <form
+          class="button-email button-email--email"
+          action=""
+          method="POST"
+        >
+          <input
+            class="button-email__tickets button-email__tickets--email"
+            type="email"
+            name="email"
+            placeholder="E-mail"
+            required
+          >
+          </input>
+          <button
+            class="button-email__square button-email__square--email"
+            type="submit"
+          >
             <img
-              class="button__txt button__txt--email"
+              class="button-email__txt button-email__txt--email"
               src="./images/tiket__black.svg"
               alt=">"
             >
-          </div>
-        </div>
+          </button>
+        </form>
       </div>
     </section>
 
@@ -239,19 +268,27 @@
           <br>
           Каса припиняє роботу за 1 годину до закриття музею
         </p>
-        <p>вул. М. Грушевського, 6; Київ, 01001
+        <p>
+          <a
+            href="https://goo.gl/maps/sx4ar4DCjozzLzi97"
+            target="_blank"
+            rel="noopener"
+            class="footer__contact-link"
+          >
+          вул. М. Грушевського, 6; Київ, 01001
+          </a>
           <br>
-          тел. +38 (044)
+          <a href="tel:+38 (044) 278-13-57" class="footer__contact-link">
+            тел. +38(044)278-13-57
+          </a>
           <br>
-          278-13-57
+          <a href="fax:+38 (044) 278-74-54" class="footer__contact-link">
+            факс +38(044)278-74-54
+          </a>
           <br>
-          факс +38 (044)
-          <br>
-          278-74-54
-          <br>
-          e-mail:
-          <br>
-          info@namu.kiev.ua
+          <a href="mailto: e-mail: info@namu.kiev.ua" class="footer__contact-link">
+            e-mail: info@namu.kiev.ua
+          </a>
         </p>
       </div>
       <div class="footer__container">
