--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Museum</title>
+    <link
+      rel="icon"
+      href="./images/logo.svg"
+      type="image/gif"
+      sizes="16x16"
+    >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
       rel="preconnect"
@@ -14,21 +20,18 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link
-      rel="preconnect"
-      href="https://fonts.gstatic.com"
-      crossorigin=""
-    >
-    <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;500;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body class="page__body">
+  <body class="page__body" id="body">
     <header class="header page__header">
       <div class="container page__container">
         <div class="header__content">
           <div class="top-action">
             <a class="icon icon--menu" href="#menu"></a>
-            <a class="header__logo" href="#">
+            <a class="logo" href="#">
               NA
               <br>
               MU
@@ -65,13 +68,56 @@
           </div>
         </div>
         <div class="header__mark">
-          <span class="header__mark-line"></span>
           <span class="header__mark-text">ПОДІЇ</span>
         </div>
       </div>
     </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container page__container">
+        <div class="menu__content">
+          <div class="menu__top top-action">
+            <a class="icon icon--cross" href="#"></a>
+          </div>
+          <ul class="menu__list">
+            <li class="menu__item">
+              <a class="logo" href="#">
+                NA
+                <br>
+                MU
+              </a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#gallery">Галерея</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#events">Виставки та події</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#lecture">Відвідування</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#subscription">Стати нашим другом</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#subscription">Про Нас</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Магазин</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#">Блог</a>
+            </li>
+            <li class="menu__item">
+              <a class="menu__link" href="#footer">Контакти</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <main class="main">
-      <section class="current-events page__current-events">
+      <section class="current-events page__current-events" id="events">
         <div class="container page__container">
           <h2 class="page__section-title">Актуальні події</h2>
           <article class="event current-events__event">
@@ -118,7 +164,8 @@
           </article>
         </div>
       </section>
-      <section class="lecture page__lecture">
+
+      <section class="lecture page__lecture" id="lecture">
         <img
           class="lecture__photo"
           src="./images/lecture.jpg"
@@ -133,95 +180,79 @@
         </div>
       </section>
 
-      <section class="gallery page__gallery">
+      <section class="gallery page__gallery" id="gallery">
         <div class="container page__container">
           <h2 class="page__section-title">Галерея</h2>
           <div class="gallery__wrapper">
-            <div class="grid">
-              <div class="grid__item grid__item--tab-1-3 grid__item--desktop-1-4 grid__item--large-1-4">
-                <img
-                  class="gallery__img gallery__img--1"
-                  src="./images/gallery1.jpg"
-                  alt="photo1"
-                  id="photo1"
-                >
-              </div>
-              <div class="grid__item grid__item--desktop-5-12 grid__item--large-5-12">
-                <img
-                  class="gallery__img gallery__img--2"
-                  src="./images/gallery2.jpg"
-                  alt="photo2"
-                >
-              </div>
-              <div class="grid__item grid__item--large-13-16">
-                <img
-                  class="gallery__img gallery__img--3"
-                  src="./images/gallery3.jpg"
-                  alt="photo3"
-                >
-              </div>
-              <div class="grid__item grid__item--desktop-1-7 grid__item--large-1-8">
-                <img
-                  class="gallery__img gallery__img--4"
-                  src="./images/gallery4.jpg"
-                  alt="photo4"
-                  id="photo4"
-                >
-              </div>
-              <div class="grid__item grid__item--desktop-8-12 grid__item--large-9-12">
-                <img
-                  class="gallery__img gallery__img--5"
-                  src="./images/gallery5.jpg"
-                  alt="photo5"
-                >
-              </div>
-              <div class="grid__item grid__item--large-13-16">
-                <img
-                  class="gallery__img gallery__img--6"
-                  src="./images/gallery6.jpg"
-                  alt="photo6"
-                >
-              </div>
+            <div class="gallery__desktop grid">
+              <img
+                class="gallery__img gallery__img--1 grid__item grid__item--tab-1-3 grid__item--desktop-1-4 grid__item--large-1-4"
+                src="./images/gallery1.jpg"
+                alt="picture-1"
+              >
+              <img
+                class="gallery__img gallery__img--2 grid__item grid__item--desktop-5-12 grid__item--large-5-12"
+                src="./images/gallery2.jpg"
+                alt="picture-2"
+              >
+              <img
+                class="gallery__img gallery__img--3 grid__item grid__item--large-13-16"
+                src="./images/gallery3.jpg"
+                alt="picture-3"
+              >
+              <img
+                class="gallery__img gallery__img--4 grid__item grid__item--desktop-1-7 grid__item--large-1-8"
+                src="./images/gallery4.jpg"
+                alt="picture-4"
+              >
+              <img
+                class="gallery__img gallery__img--5 grid__item grid__item--desktop-8-12 grid__item--large-9-12"
+                src="./images/gallery5.jpg"
+                alt="picture-5"
+              >
+              <img
+                class="gallery__img gallery__img--6 grid__item grid__item--large-13-16"
+                src="./images/gallery6.jpg"
+                alt="picture-6"
+              >
             </div>
-          </div>
-          <div class="gallery__slider slider">
-            <input
-              class="slider__input slider__input--1"
-              type="radio"
-              id="1"
-              name="radio"
-              checked
-            >
-            <label class="slider__label" for="1"></label>
-
-            <input
-              class="slider__input slider__input--2"
-              type="radio"
-              id="2"
-              name="radio"
-            >
-            <label class="slider__label" for="2"></label>
-
-            <input
-              class="slider__input slider__input--3"
-              type="radio"
-              id="3"
-              name="radio"
-            >
-            <label class="slider__label" for="3"></label>
-
-            <input
-              class="slider__input slider__input--4"
-              type="radio"
-              id="4"
-              name="radio"
-            >
-            <label class="slider__label" for="4"></label>
-
+            <div class="gallery__mobile">
+              <img
+                class="gallery__mobile-img"
+                src="./images/gallery1.jpg"
+                alt="picture"
+                id="slide-1"
+              >
+              <img
+                class="gallery__mobile-img"
+                src="./images/gallery2.jpg"
+                alt="picture"
+                id="slide-2"
+              >
+              <img
+                class="gallery__mobile-img"
+                src="./images/gallery4.jpg"
+                alt="picture"
+                id="slide-3"
+              >
+              <img
+                class="gallery__mobile-img"
+                src="./images/gallery5.jpg"
+                alt="picture"
+                id="slide-4"
+              >
+            </div>
+            <div class="gallery__bulet">
+              <a class="gallery__bulet-link" href="#slide-1"></a>
+              <a class="gallery__bulet-link" href="#slide-2"></a>
+              <a class="gallery__bulet-link" href="#slide-3"></a>
+              <a class="gallery__bulet-link" href="#slide-4"></a>
+            </div>
           </div>
         </div>
       </section>
-      <section class="subscription page__subscription">
+
+      <section class="subscription page__subscription" id="subscription">
         <div class="container page__container">
           <div class="subscription__wrap">
             <h2 class="subscription__title">Підписка</h2>
@@ -240,35 +271,35 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer class="footer" id="footer">
       <div class="container page__container">
-        <div class="footer__icon">
-          <a class="header__logo" href="#">
-            NA
-            <br>
-            MU
-          </a>
-          <div class="footer__media">
-            <a href="#" target="blank">
-              <img
-                class="footer__media-icon"
-                src="./images/facebook.svg"
-                alt="facebook"
-              >
+        <div class="grid">
+          <div class="footer__icon grid__item grid__item--mobile-1-2  grid__item--tablet-1-1">
+            <a class="logo footer__logo" href="#">
+              NA
+              <br>
+              MU
             </a>
-            <a href="#" target="blank">
-              <img
-                class="footer__media-icon"
-                src="./images/insta.svg"
-                alt="instagram"
-              >
-            </a>
+            <div class="footer__media">
+              <a href="https://www.facebook.com/" target="blank">
+                <img
+                  class="footer__media-icon footer__media-icon--mr"
+                  src="./images/facebook.svg"
+                  alt="facebook"
+                >
+              </a>
+              <a href="https://www.instagram.com/" target="blank">
+                <img
+                  class="footer__media-icon"
+                  src="./images/insta.svg"
+                  alt="instagram"
+                >
+              </a>
+            </div>
           </div>
-        </div>
-        <div class="footer__info">
-          <div class="footer__work-time">
+          <div class="footer__work-time grid__item grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-3-4 grid__item--large-3-4">
             <p class="footer__info-title">Графік роботи</p>
-            <ul class="scheduling">
+            <ul class="footer__scheduling">
               <li>
                 <strong>12:00 — 20:00</strong>
                 середа
@@ -297,6 +328,68 @@
               до закриття музею
             </p>
           </div>
+          <div class="footer__contacts grid__item grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-5-6 grid__item--large-6-7">
+            <p class="footer__info-title">Графік роботи</p>
+            <a
+              class="footer__contacts-link"
+              href="https://goo.gl/maps/EfVBbskT1yZhn7Q28"
+              target="blank"
+              >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a
+              class="footer__contacts-link"
+              href="tel:+380442781357">
+              тел. +38 (044) 278-13-57
+            </a>
+            <a
+              class="footer__contacts-link"
+              href="tel:+380442781357">факс +38 (044) 278-74-54
+            </a>
+            <a
+              class="footer__contacts-link"
+              href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <div class="footer__line grid__item--mobile-1-2 grid__item--tablet-2-5 grid__item--desktop-7-7 grid__item--large-8-9">
+            <a class="footer__to-top" href="#body"></a>
+          </div>
+          <ul class="footer__nav grid__item grid__item--mobile-1-1 grid__item--tablet-2-3 grid__item--desktop-8-9 grid__item--large-10-11">
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Галерея</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Виставки та події</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Відвідування</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Стати нашим другом</a>
+            </li>
+          </ul>
+          <ul class="footer__nav grid__item grid__item--mobile-2-2 grid__item--tablet-4-5 grid__item--desktop-10-10 grid__item--large-13-13">
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Про Нас</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Магазин</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Блог</a>
+            </li>
+            <li class="footer__nav-item">
+              <a class="footer__nav-link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer__bottom">
+          <span class="footer__bottom-copyright">
+            Copyright © 2019. All Rights Reserved.
+          </span>
+          <span class="footer__bottom-author">
+            Designed by Zhyriada Marina
+          </span>
         </div>
       </div>
     </footer>
