--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="header__nav">
         <a href="#menu" class="header__menu-opener"></a>
-        <a href="/" class="logo">
+        <a href="#/" class="logo">
           <span class="logo__txt">
             na
             <br>
@@ -115,31 +115,38 @@
         Актуальні події
       </h2>
       <div class="relevant-events__block">
-        <img
-          class="relevant-events__img"
-          src="./images/photo01.png"
-          alt=""
-        >
-        <div class="relevant-events__exb">
-          <span class="relevant-events__left">ВИСТАВКА</span>
-          <span class="relevant-events__right">26.08-29.11.2019</span>
+        <div class="relevant-events__container">
+          <img
+            class="relevant-events__img"
+            src="./images/photo01.png"
+            alt=""
+          >
+          <div class="relevant-events__block-column">
+            <div class="relevant-events__exb">
+              <span class="relevant-events__left">ВИСТАВКА</span>
+              <span class="relevant-events__right">26.08-29.11.2019</span>
+            </div>
+            <h3 class="relevant-events__name-exb">Йду і повертаюсь</h3>
+            <p class="relevant-events__content">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
         </div>
-        <h3 class="relevant-events__name-exb">Йду і повертаюсь</h3>
-        <p class="relevant-events__content">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
-
-        <img
-          class="relevant-events__img"
-          src="./images/photo02.png"
-          alt=""
-        >
-        <div class="relevant-events__exb">
-          <span class="relevant-events__left">ВИСТАВКА</span>
-          <span class="relevant-events__right">26.08-29.11.2019</span>
+      </div>
+      <div class="relevant-events__block">
+        <div class="relevant-events__container relevant-events__container--revers">
+          <img
+            class="relevant-events__img"
+            src="./images/photo02.png"
+            alt=""
+          >
+          <div class="relevant-events__block-column">
+            <div class="relevant-events__exb">
+              <span class="relevant-events__left">ВИСТАВКА</span>
+              <span class="relevant-events__right">26.08-29.11.2019</span>
+            </div>
+            <h3 class="relevant-events__name-exb">І спогади і мрії</h3>
+            <p class="relevant-events__content">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+          </div>
         </div>
-        <h3 class="relevant-events__name-exb">І спогади і мрії</h3>
-        <p class="relevant-events__content">
-          Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-        </p>
       </div>
     </section>
 
@@ -167,7 +174,7 @@
           class="gallery__img"
         >
         <img
-          src="./images/g05.png"
+          src="./images/g04.png"
           alt="gallery"
           class="gallery__img"
         >
@@ -177,7 +184,7 @@
           class="gallery__img"
         >
         <img
-          src="./images/g04.png"
+          src="./images/g05.png"
           alt="gallery"
           class="gallery__img"
         >
@@ -234,8 +241,28 @@
           </span>
         </a>
         <div class="footer__soc-links">
-          <img src="./images/facebk.svg" alt="">
-          <img src="./images/instagram (3).svg" alt="">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="./images/facebk.svg"
+              alt=""
+              class="footer__soc-links--fcb"
+            >
+          </a>
+          <a
+            href="https://www.instagram.com/namu.museum/?hl=uk"
+            target="_blank"
+            rel="noopener"
+          >
+            <img
+              src="./images/instagram (3).svg"
+              alt=""
+              class="footer__soc-links--ins"
+            >
+          </a>
         </div>
       </div>
 
@@ -293,7 +320,9 @@
       </div>
       <div class="footer__container">
         <button class="footer__button">
-          <img src="./images/Arrow up.svg" alt="">
+          <a href="#">
+            <img src="./images/Arrow up.svg" alt="">
+          </a>
         </button>
       </div>
 
