--- a/src/index.html
+++ b/src/index.html
@@ -321,7 +321,11 @@
       <div class="footer__container">
         <button class="footer__button">
           <a href="#">
-            <img src="./images/Arrow up.svg" alt="">
+            <img
+              src="./images/Arrow up.svg"
+              alt=""
+              class="footer__svg"
+            >
           </a>
         </button>
       </div>
