--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,9 @@
             <a class="icon icon--cross" href="#"></a>
           </div>
           <ul class="menu__list">
+            <li class="menu__item menu__item--onDesktop">
+              <a class="icon icon--cross" href="#"></a>
+            </li>
             <li class="menu__item">
               <a class="logo" href="#">
                 NA
