--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body class="page">
-    <header class="header">
+    <header class="header page__header">
       <div class="container">
         <div class="header__content">
           <nav class="nav header__nav">
@@ -49,6 +49,7 @@
           </a>
 
           <a href="#actual" class="header__teleport">
+            <div class="header__teleport-line"></div>
             ПОДІЇ
           </a>
         </div>
@@ -238,12 +239,12 @@
           <div class="gallery__place">
 
             <div class="place__first">
-              <div class="grid">
+              <div class="grid grid--desktop">
                 <div class="grid__item grid__item--1-4">
                   <img
                     src="./images/1.png"
                     alt="1"
-                    class="place__photo place__photo--gallery-1"
+                    class="place__photo-gallery place__photo--gallery-1"
                   >
                 </div>
 
@@ -251,19 +252,19 @@
                   <img
                     src="./images/2.png"
                     alt="2"
-                    class="place__photo place__photo--gallery-1"
+                    class="place__photo-gallery place__photo--gallery-1 place__photo-hidden"
                   >
                 </div>
               </div>
             </div>
 
             <div class="place__second">
-              <div class="grid">
+              <div class="grid grid--desktop">
                 <div class="grid__item grid__item--1-8">
                   <img
                     src="./images/3.png"
                     alt="3"
-                    class="place__photo place__photo--gallery-2"
+                    class="place__photo-gallery place__photo--gallery-2"
                   >
                 </div>
 
@@ -271,7 +272,7 @@
                   <img
                     src="./images/4.png"
                     alt="4"
-                    class="place__photo place__photo--gallery-2"
+                    class="place__photo-gallery place__photo--gallery-2"
                   >
                 </div>
               </div>
@@ -298,21 +299,168 @@
 
           <div class="subscribe__fortext">
             <div class="grid grid--desktop">
-              <div class="grid__item grid__item--4-8">
-                <input
+              <div class="grid__item grid__item--4-10">
+                <div class="subscribe__container">
+                  <input
                   type="email"
                   class="subscribe__email"
                   placeholder="E-mail"
                 >
-              </div>
 
-              <div class="grid__item grid__item--9-10">
-                <div class="subscribe__button"></div>
+                  <div class="subscribe__button"></div>
+                </div>
+
+
               </div>
             </div>
           </div>
         </div>
       </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer__line-container">
+        <div class="footer__line"></div>
+      </div>
+      <div class="container">
+        <div class="grid grid--desktop grid--footer">
+          <div class="grid__item grid__item--1-1">
+            <div class="footer__first">
+              <div class="footer__logo">
+                <h1 class="logo">
+                  NA
+                  <br>
+                  MU
+                </h1>
+              </div>
+
+              <div class="footer__socia">
+                <a href="#" class="footer__link">
+                  <img
+                    src="./images/Facebook.png"
+                    alt="Facebook"
+                    class="footer__socia-icon"
+                  >
+                </a>
+
+                <a href="#" class="footer__link">
+                  <img
+                    src="./images/insta.png"
+                    alt="insta"
+                    class="footer__socia-icon"
+                  >
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--3-4 footer--phone">
+            <div class="footer__second">
+              <div class="footer__name">
+                Графік роботи
+              </div>
+              <div class="footer__dates">
+                <span class="footer__time">
+                  12:00— 20:00
+                </span>
+                середа
+                <br>
+                <span class="footer__time">
+                  12:00— 20:00
+                </span>
+                четвер
+                <br>
+                <span class="footer__time">
+                  12:00 — 20:00
+                </span>
+                п’ятниця
+                <br>
+                <span class="footer__time">
+                  11:00 — 19:00
+                </span>
+                субота
+                <br>
+                <span class="footer__time">
+                  11:00 — 19:00
+                </span>
+                неділя
+              </div>
+              <div class="footer__weekend">
+                Вихідні: понеділок, вівторок
+                Каса припиняє роботу за 1 годину
+                до закриття музею
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--5-6  footer--phone">
+            <div class="footer__third">
+              <div class="footer__name">
+                Контакти:
+              </div>
+
+              <div class="footer__contacs">
+                <a
+                  href="https://goo.gl/maps/tmfgVPRvdTDrjmFn8"
+                  class="footer__link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  вул. М. Грушевського, 6;
+                  <br>
+                  Київ, 01001
+                </a>
+                <br>
+                <a href="tel:+380442781357" class="footer__link">
+                  тел. +38 (044) 278-13-57
+                </a>
+                <br>
+                <a href="tel:+380442787454" class="footer__link">
+                  факс +38 (044) 278-74-54
+                </a>
+                <br>
+                <a href="mailto:info@namu.kiev.ua" class="footer__link">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--8-9">
+            <div class="footer__four">
+              <div class="footer__nav">
+                <a href="#" class="nav__link">Галерея</a>
+                <a href="#" class="nav__link">Виставки та події</a>
+                <a href="#" class="nav__link">Відвідування</a>
+                <a href="#" class="nav__link">Стати нашим другом</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--10-10">
+            <div class="footer__five">
+              <div class="footer__nav">
+                <a href="#" class="nav__link">Про Нас</a>
+                <a href="#" class="nav__link">Магазин</a>
+                <a href="#" class="nav__link">Блог</a>
+                <a href="#" class="nav__link">Контакти</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--1-4">
+            <div class="footer__copy">
+              Copyright © 2019. All Rights Reserved.
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--11-12">
+            <div class="footer__design">
+              Designed by Zhyriada Marina
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
