fixed Museum landing

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>National Museum</title>
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="./styles/main.scss">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,21 +28,6 @@
                 class="icon__cross"
               >
             </a>
-
-            <form
-              action=""
-              method="POST"
-              class="menu__form"
-            >
-              <input type="text" class="menu__search-field">
-              <a class="icon menu__icon menu__icon--cross" href="#menu">
-                <img
-                  src="images/search.svg"
-                  alt="cross-dot"
-                  class="icon__cross"
-                >
-              </a>
-            </form>
           </div>
 
           <div class="menu__bar">
@@ -63,16 +48,16 @@
                 <a href="#art" class="menu__link">Відвідування</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Стати нашим другом</a>
+                <a href="#sign-up" class="menu__link">Стати нашим другом</a>
               </li>
               <li class="menu__item">
                 <a href="#art-content" class="menu__link">Про Нас</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Магазин</a>
+                <a href="#art" class="menu__link">Магазин</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Блог</a>
+                <a href="#sign-up" class="menu__link">Блог</a>
               </li>
               <li class="menu__item">
                 <a href="#footer" class="menu__link">Контакти</a>
@@ -295,7 +280,7 @@
         </div>
       </section>
 
-      <section class="page__section sign-up sign-up--">
+      <section class="page__section sign-up sign-up--" id="sign-up">
         <div class="container">
 
           <div class="sign-up__container">
@@ -349,14 +334,14 @@
                 <img
                   src="images/facebook.svg"
                   alt="facebook"
-                  class="icon-face "
+                  class="icon__soc"
                 >
               </div>
               <div class="icon__item">
                 <img
                   src="images/insta.svg"
                   alt="instagram"
-                  class="icon-inst "
+                  class="icon__soc"
                 >
               </div>
             </div>
@@ -385,7 +370,13 @@
             <div class="timetable footer__timetable">
               <p class="timetable__item timetable__item--schedal">Контакти:</p>
               <div class="timetable__description">
-                вул. М. Грушевського, 6; Київ, 01001<br>
+                <a
+                  href="https://goo.gl/maps/zkF8gHtXZoUJWT2Q6"
+                  class="timetable__link"
+                  target="blank"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001<br>
+                </a>
 
                 <a href="tel:+38 (044) 278-13-57" class="timetable__link">тел. +38 (044) 278-13-57<br></a>
                 <a href="tel:+38 (044) 278-74-54" class="timetable__link">факс +38 (044) 278-74-54<br></a>
@@ -413,16 +404,16 @@
           <div class="grid__item grid__item--tablet-2-4">
             <ul class="footer__list">
               <li class="footer__item">
-                <a href="" class="footer__link">Галерея</a>
+                <a href="#gallery" class="footer__link">Галерея</a>
               </li>
               <li class="footer__item">
-                <a href="" class="footer__link">Виставки та події</a>
+                <a href="#events" class="footer__link">Виставки та події</a>
               </li>
               <li class="footer__item">
-                <a href="" class="footer__link">Відвідування</a>
+                <a href="#art" class="footer__link">Відвідування</a>
               </li>
               <li class="footer__item">
-                <a href="" class="footer__link">Стати нашим другом</a>
+                <a href="#sign-up" class="footer__link">Стати нашим другом</a>
               </li>
             </ul>
           </div>
@@ -430,16 +421,16 @@
           <div class="grid__item grid__item--tablet-6-8">
             <ul class="footer__list">
               <li class="footer__item">
-                <a href="" class="footer__link">Про Нас</a>
+                <a href="#art-content" class="footer__link">Про Нас</a>
               </li>
               <li class="footer__item">
-                <a href="" class="footer__link">Магазин</a>
+                <a href="#art" class="footer__link">Магазин</a>
               </li>
               <li class="footer__item">
-                <a href="" class="footer__link">Блог</a>
+                <a href="#sign-up" class="footer__link">Блог</a>
               </li>
               <li class="footer__item">
-                <a href="" class="footer__link">Контакти</a>
+                <a href="#footer" class="footer__link">Контакти</a>
               </li>
             </ul>
           </div>
