Small fix for large screens

--- a/src/index.html
+++ b/src/index.html
@@ -282,7 +282,7 @@
             Бути в курсі всіх актуальних подій та останніх новин.
           </div>
           <form
-            action=""
+            action="#"
             method="POST"
             class="subscribe__form"
           >
@@ -459,7 +459,6 @@
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="https://kenwheeler.github.io/slick/slick/slick.js"></script>
-    <script type="text/javascript" src="./scripts/slick.min.js"></script>
     <script src="./scripts/main.js"></script>
   </body>
 </html>
