fixes after Ihor reiview v1.01

--- a/src/index.html
+++ b/src/index.html
@@ -45,19 +45,19 @@
             </a>
           </li>
           <li class="navigation-menu__list-item">
-            <a href="#" class="navigation-menu__list-item-link">
+            <p href="#" class="navigation-menu__list-item-link">
               Про Нас
-            </a>
+            </p>
           </li>
           <li class="navigation-menu__list-item">
-            <a href="#" class="navigation-menu__list-item-link">
+            <p href="#" class="navigation-menu__list-item-link">
               Магазин
-            </a>
+            </p>
           </li>
           <li class="navigation-menu__list-item">
-            <a href="#" class="navigation-menu__list-item-link">
+            <p href="#" class="navigation-menu__list-item-link">
               Блог
-            </a>
+            </p>
           </li>
           <li class="navigation-menu__list-item">
             <a href="#contacts" class="navigation-menu__list-item-link">
@@ -79,21 +79,21 @@
         <img
           src="images/museum-photo-320w300.png"
           alt="museum photo"
-          class="art-museum__photo">
-      </picture>
-      <div class="art-museum__content-group">
+          class="art-museum__photo"
+        >
         <h1 class="art-museum__title container">
           ХУДОЖ<span class="art-museum__title-border-text">НІЙ
             </span>
           МУЗЕЙ
         </h1>
-        <a href="#" class="buy-ticket">
+      </picture>
+
+        <a href="/onDevelop.html" class="buy-ticket">
           <button class="buy-ticket__button">
             Квитки
           </button>
           <span class="buy-ticket__button-icon"></span>
         </a>
-      </div>
       <div class="art-museum__event-absolute">Події</div>
     </section>
     <section class="current-events container">
@@ -245,8 +245,8 @@
           MU
         </a>
         <div class="footer__insta-facebook-icon-container">
-          <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="icon icon--facebook"></a>
-          <a href="https://www.facebook.com/" target="_blank" rel="noopener" class="icon icon--instagram"></a>
+          <a href="https://www.facebook.com/" target="_blank" rel="noopener" class="icon icon--facebook"></a>
+          <a href="https://www.instagram.com/" target="_blank" rel="noopener" class="icon icon--instagram"></a>
         </div>
       </div>
       <div class="footer__schedule-contact-wrapper  grid__mob--1-2 grid__tabl--2-5 grid__desk--3-7">
@@ -310,15 +310,22 @@
         <div class="footer__contacts" id="contacts">
           <p class="footer__contacts-title">Контакти:</p>
           <p class="footer__contacts-text">
-            вул. М. Грушевського, 6;
-            <br class="line-separator">
-            Київ, 01001
-            <br>
-            тел. +38 (044) 278-13-57
+            <a href="https://goo.gl/maps/AydWwf2GZQsCcv4f6"  target="_blank" rel="noopener" class="footer__contacts-address-link">
+              вул. М. Грушевського, 6;
+              <br class="line-separator">
+              Київ, 01001
+              <br>
+            </a>
+           <a href="tel:+380442781357" class="footer__contacts-call-phone-link">
+             тел. +38 (044) 278-13-57
+           </a>
             <br>
             факс +38 (044) 278-74-54
             <br>
-            e-mail: info@namu.kiev.ua
+            <a href="mailto:info@namu.kiev.ua" class="footer__contacts-email-link">
+              e-mail: info@namu.kiev.ua
+            </a>
+
           </p>
         </div>
         </div>
@@ -330,21 +337,21 @@
         <a href="#gallery" class="footer__menu-item">
           Галерея
         </a>
-        <a href="" class="footer__menu-item">
+        <p href="" class="footer__menu-item">
           Про Нас
-        </a>
+        </p>
         <a href="#current-events" class="footer__menu-item">
           Виставки та події
         </a>
-        <a href="" class="footer__menu-item">
+        <p href="" class="footer__menu-item">
           Магазин
-        </a>
+        </p>
         <a href="#lecture" class="footer__menu-item">
           Відвідування
         </a>
-        <a href="" class="footer__menu-item">
+        <p href="" class="footer__menu-item">
           Блог
-      </a>
+      </p>
         <a href="#subscribe" class="footer__menu-item">
           Стати нашим другом
         </a>
