--- a/src/onDevelop.html
+++ b/src/onDevelop.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-    <body>
-        $END$
-    </body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <style>
+      body {
+        width: 100vw;
+        height: 100vh;
+        color: white;
+        background-color: dodgerblue;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        font-size: 60px;
+      }
+    </style>
+  </head>
+  <body>
+    <p>  We are currently develop this page...</p>
+  </body>
 </html>
