--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="navigation-menu" id="nav-menu">
       <div class="navigation-menu__content-wrapper container">
-        <a href="/Museum/#" class="logo">
+        <a href="/Museum/#" class="logo logo--black">
           NA
           <br>
           MU
@@ -65,7 +65,6 @@
             </a>
           </li>
         </ul>
-        <a href="#" class="navigation-menu__search icon icon--search "></a>
       </div>
 
     </div>
@@ -337,21 +336,12 @@
         <a href="#gallery" class="footer__menu-item">
           Галерея
         </a>
-        <p href="" class="footer__menu-item">
-          Про Нас
-        </p>
         <a href="#current-events" class="footer__menu-item">
           Виставки та події
         </a>
-        <p href="" class="footer__menu-item">
-          Магазин
-        </p>
         <a href="#lecture" class="footer__menu-item">
           Відвідування
         </a>
-        <p href="" class="footer__menu-item">
-          Блог
-      </p>
         <a href="#subscribe" class="footer__menu-item">
           Стати нашим другом
         </a>
