--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,13 @@
       <div class="container">
         <div class="menu__content">
           <div class="menu__logo-container">
+            <a href="#" class="menu__link">
+              <img
+                src="./images/close.svg"
+                alt="cross"
+                class="menu__cross"
+              >
+            </a>
             <a href="#" class="menu__logo">
               <h1 class="logo">
                 NA
@@ -300,15 +307,16 @@
           <div class="subscribe__fortext">
             <div class="grid grid--desktop">
               <div class="grid__item grid__item--4-10">
-                <div class="subscribe__container">
+
+                <form action="#" class="subscribe__container">
                   <input
                   type="email"
                   class="subscribe__email"
                   placeholder="E-mail"
                 >
 
-                  <div class="subscribe__button"></div>
-                </div>
+                  <button class="subscribe__button"></button>
+                </form>
 
 
               </div>
@@ -319,9 +327,7 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__line-container">
-        <div class="footer__line"></div>
-      </div>
+
       <div class="container">
         <div class="grid grid--desktop grid--footer">
           <div class="grid__item grid__item--1-1">
@@ -354,77 +360,81 @@
             </div>
           </div>
 
-          <div class="grid__item grid__item--3-4 footer--phone">
-            <div class="footer__second">
-              <div class="footer__name">
-                Графік роботи
-              </div>
-              <div class="footer__dates">
-                <span class="footer__time">
-                  12:00— 20:00
-                </span>
-                середа
-                <br>
-                <span class="footer__time">
-                  12:00— 20:00
-                </span>
-                четвер
-                <br>
-                <span class="footer__time">
-                  12:00 — 20:00
-                </span>
-                п’ятниця
-                <br>
-                <span class="footer__time">
-                  11:00 — 19:00
-                </span>
-                субота
-                <br>
-                <span class="footer__time">
-                  11:00 — 19:00
-                </span>
-                неділя
-              </div>
-              <div class="footer__weekend">
-                Вихідні: понеділок, вівторок
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </div>
-            </div>
-          </div>
-
-          <div class="grid__item grid__item--5-6  footer--phone">
-            <div class="footer__third">
-              <div class="footer__name">
-                Контакти:
-              </div>
-
-              <div class="footer__contacs">
-                <a
-                  href="https://goo.gl/maps/tmfgVPRvdTDrjmFn8"
-                  class="footer__link"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                >
-                  вул. М. Грушевського, 6;
+          <div class="grid__item grid__item--3-6 footer--phone">
+            <div class="footer__cont">
+              <div class="footer__second">
+                <div class="footer__name">
+                  Графік роботи
+                </div>
+                <div class="footer__dates">
+                  <span class="footer__time">
+                    12:00— 20:00
+                  </span>
+                  середа
                   <br>
-                  Київ, 01001
-                </a>
-                <br>
-                <a href="tel:+380442781357" class="footer__link">
-                  тел. +38 (044) 278-13-57
-                </a>
-                <br>
-                <a href="tel:+380442787454" class="footer__link">
-                  факс +38 (044) 278-74-54
-                </a>
-                <br>
-                <a href="mailto:info@namu.kiev.ua" class="footer__link">
-                  e-mail: info@namu.kiev.ua
-                </a>
+                  <span class="footer__time">
+                    12:00— 20:00
+                  </span>
+                  четвер
+                  <br>
+                  <span class="footer__time">
+                    12:00 — 20:00
+                  </span>
+                  п’ятниця
+                  <br>
+                  <span class="footer__time">
+                    11:00 — 19:00
+                  </span>
+                  субота
+                  <br>
+                  <span class="footer__time">
+                    11:00 — 19:00
+                  </span>
+                  неділя
+                </div>
+                <div class="footer__weekend">
+                  Вихідні: понеділок, вівторок
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </div>
+              </div>
+
+              <div class="footer__third">
+                <div class="footer__name">
+                  Контакти:
+                </div>
+
+                <div class="footer__contacs">
+                  <a
+                    href="https://goo.gl/maps/tmfgVPRvdTDrjmFn8"
+                    class="footer__link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    вул. М. Грушевського, 6;
+                    <br>
+                    Київ, 01001
+                  </a>
+                  <br>
+                  <a href="tel:+380442781357" class="footer__link">
+                    тел. +38 (044) 278-13-57
+                  </a>
+                  <br>
+                  <a href="tel:+380442787454" class="footer__link">
+                    факс +38 (044) 278-74-54
+                  </a>
+                  <br>
+                  <a href="mailto:info@namu.kiev.ua" class="footer__link">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
               </div>
             </div>
+
           </div>
+
+          <div class="footer__line-container"></div>
+          <div class="footer__line"></div>
 
           <div class="grid__item grid__item--8-9">
             <div class="footer__four">
@@ -448,16 +458,17 @@
             </div>
           </div>
 
-          <div class="grid__item grid__item--1-4">
-            <div class="footer__copy">
-              Copyright © 2019. All Rights Reserved.
-            </div>
-          </div>
+          <div class="grid__item grid__item--1-12">
+            <div class="footer__foot">
+              <div class="footer__copy">
+                Copyright © 2019. All Rights Reserved.
+              </div>
 
-          <div class="grid__item grid__item--11-12">
-            <div class="footer__design">
-              Designed by Zhyriada Marina
+              <div class="footer__design">
+                Designed by Zhyriada Marina
+              </div>
             </div>
+
           </div>
         </div>
       </div>
