--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
       <div class="container">
         <div class="menu__content">
           <div class="menu__logo-container">
-            <a href="#" class="menu__link">
+            <a href="#">
               <img
                 src="./images/close.svg"
                 alt="cross"
