--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
           <div class="menu__logo-container">
             <a href="#">
               <img
-                src="./images/close.svg"
+                src="./images/letter-x.png"
                 alt="cross"
                 class="menu__cross"
               >
